<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_are_you_sure"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="60dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_yes"
            android:id="@+id/btn_yes"
            android:onClick="onClickInDrawer" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_no"
            android:id="@+id/btn_no"
            android:layout_gravity="right"
            android:onClick="onClickInDrawer" />
    </LinearLayout>
</LinearLayout>