<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorBackground" tools:context=".Startscreen">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appName"
            android:text="Mord"
            android:textColor="@color/colorFont"
            android:textSize="100dp"
            android:rotation="-10"
            android:padding="20dp"
            android:gravity="center"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="600dp"
            android:layout_height="40dp"
            android:background="@color/donotcross"
            android:rotation="-10"
            android:id="@+id/donotcross"
            android:contextClickable="false"
            android:layout_gravity="center_horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/donotcross"
                android:id="@+id/textView12"
                android:textSize="30dp"
                android:textColor="@color/colorBackground" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/host"
                android:textSize="20dp"
                android:id="@+id/host"
                android:layout_gravity="center_horizontal"
                android:onClick="onClickCreateGame"
                android:textColor="#FFFFFF"
                android:padding="10dp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/search"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:layout_margin="20dp"
                android:onClick="onClickJoin" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:id="@+id/rules"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
