<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".CreateGame"
    android:background="@color/colorBackground">


    <FrameLayout
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorOtherTurn"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView2" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/gameName"
                        android:id="@+id/txt_gameName"
                        android:textSize="18sp"
                        android:textColor="@color/colorFont" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText"
                        android:textColor="@color/colorFont"
                        android:autoText="false"
                        android:textSize="18sp"
                        android:singleLine="true"
                        />

                    <CheckBox
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_pwd"
                        android:id="@+id/cb_password"
                        android:checked="false"
                        android:textSize="18sp"
                        android:textColor="@color/colorFont" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText2"
                        android:password="true"
                        android:textColor="@color/colorFont"
                        android:textSize="18sp"
                        android:singleLine="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:id="@+id/txt_amount"
                        android:textColor="@color/colorFont"
                        android:textSize="18sp"
                        android:textIsSelectable="false" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="8dp">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/countPlayers"
                                android:id="@+id/txt_countPlayers"
                                android:textColor="@color/colorFont"
                                android:layout_weight="1"
                                android:textSize="18sp"
                                android:textIsSelectable="false" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:baselineAligned="false"
                            android:clickable="false">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/countRooms"
                                android:id="@+id/countRooms"
                                android:textColor="@color/colorFont"
                                android:layout_weight="1"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/countWeapons"
                                android:id="@+id/txt_countWeapons"
                                android:textColor="@color/colorFont"
                                android:layout_weight="1"
                                android:textSize="18sp"
                                android:textIsSelectable="false" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="3dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <!-- Border and Textsize -->
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/border"
                            android:layout_marginRight="10dp">


                            <Spinner

                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:id="@+id/spinner_player"
                                android:drawSelectorOnTop="true"
                                android:spinnerMode="dropdown"
                                android:layout_weight="1"
                                android:entries="@array/player_numbers"
                                android:entryValues="@array/players"
                                android:contextClickable="false" />
                        </LinearLayout>

                        <!-- Border and Textsize -->
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/border"
                            android:layout_marginRight="10dp">

                            <Spinner
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/spinner_room"
                                android:layout_gravity="center_horizontal"
                                android:entries="@array/room_numbers"
                                android:entryValues="@array/rooms"
                                android:layout_weight="1" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/border"
                            android:layout_marginRight="10dp">

                            <Spinner
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:id="@+id/spinner_weapon"
                                android:drawSelectorOnTop="true"
                                android:spinnerMode="dropdown"
                                android:layout_weight="1"
                                android:entries="@array/weapon_numbers"
                                android:entryValues="@array/weapons"
                                android:contextClickable="false" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1">

                            <TextView
                                android:layout_marginTop="20dp"
                                android:layout_marginLeft="3dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/txt_minutes"
                                android:id="@+id/textView13"
                                android:textColor="@color/colorFont"
                                android:textSize="18sp" />

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="time"
                                android:ems="10"
                                android:id="@+id/et_minutes"
                                android:layout_gravity="center_horizontal"
                                android:text="3"
                                android:textColor="@color/colorFont"
                                android:textSize="18sp"
                                android:singleLine="true"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1">

                            <TextView
                                android:layout_marginTop="20dp"
                                android:layout_marginLeft="3dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/txt_seconds"
                                android:id="@+id/textView14"
                                android:textColor="@color/colorFont"
                                android:textSize="18sp" />

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="time"
                                android:ems="10"
                                android:id="@+id/et_seconds"
                                android:text="00"
                                android:textColor="@color/colorFont"
                                android:textSize="18sp"
                                android:singleLine="true"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="2" >

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_button"
        android:onClick="onClickNextScreen"
        android:text="@string/next_button"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorFont"
        android:layout_weight="6" /><![CDATA[








    />











]]>
</LinearLayout>